--- a/Cs1_HomorphicEncryption/HomorphicEncryption.ipynb
+++ b/Cs1_HomorphicEncryption/HomorphicEncryption.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -18,12 +18,12 @@
             "\n",
             "Record:\n",
             "Original: {'account_number': '123456789', 'Name': 'Sai Ravuri', 'DOB': '09/27/1998', 'balance': 5000.0, 'transaction_history': ['Deposit $1000', 'Withdraw $500', 'Transfer $200']}\n",
-            "Encrypted: {'account_number': '3456789:;', 'Name': 'Uck\"Tcxwtk', 'DOB': '2;14913;;:', 'balance': '722202', 'transaction_history': ['Fgrqukv\"&3222', 'Ykvjftcy\"&722', 'Vtcpuhgt\"&422']}\n",
+            "Encrypted: {'account_number': 'pqrstuvwx', 'Name': '3AI_2AVURI', 'DOB': 'oxnqvnpxxw', 'balance': 'tooomo', 'transaction_history': ['$EPOSIT_cpooo', '7ITHDRAW_ctoo', '4RANSFER_cqoo']}\n",
             "Decrypted: {'account_number': '123456789', 'Name': 'Sai Ravuri', 'DOB': '09/27/1998', 'balance': 5000.0, 'transaction_history': ['Deposit $1000', 'Withdraw $500', 'Transfer $200']}\n",
             "\n",
             "Record:\n",
             "Original: {'account_number': '987654321', 'Name': 'Prakash Raj Baskar Raj', 'balance': 7500.0, 'transaction_history': ['Deposit :$2000', 'Withdraw :$1000', 'Transfer :$300']}\n",
-            "Encrypted: {'account_number': ';:9876543', 'Name': 'Rtcmcuj\"Tcl\"Dcumct\"Tcl', 'balance': '972202', 'transaction_history': ['Fgrqukv\"<&4222', 'Ykvjftcy\"<&3222', 'Vtcpuhgt\"<&522']}\n",
+            "Encrypted: {'account_number': 'xwvutsrqp', 'Name': '0RAKASH_2AJ_\"ASKAR_2AJ', 'balance': 'vtoomo', 'transaction_history': ['$EPOSIT_ycqooo', '7ITHDRAW_ycpooo', '4RANSFER_ycroo']}\n",
             "Decrypted: {'account_number': '987654321', 'Name': 'Prakash Raj Baskar Raj', 'balance': 7500.0, 'transaction_history': ['Deposit :$2000', 'Withdraw :$1000', 'Transfer :$300']}\n"
           ]
         }
@@ -95,58 +95,6 @@
         "    print(\"Encrypted:\", encrypted_record)\n",
         "    print(\"Decrypted:\", decrypted_record)\n"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 6,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Requirement already satisfied: numpy in c:\\python312\\lib\\site-packages (2.0.1)\n",
-            "Note: you may need to restart the kernel to use updated packages.\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "[notice] A new release of pip is available: 24.0 -> 24.2\n",
-            "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
-          ]
-        }
-      ],
-      "source": [
-        "pip install numpy\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 8,
-      "metadata": {},
-      "outputs": [
-        {
-          "ename": "SyntaxError",
-          "evalue": "invalid syntax (3722592295.py, line 1)",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;36m  Cell \u001b[1;32mIn[8], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    git Init\u001b[0m\n\u001b[1;37m        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-          ]
-        }
-      ],
-      "source": [
-        "git Init"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
